[Mac] Add URL Scheme to Fullscreen Touch Bar

Bug: 720120
Change-Id: I6652b218306e7b864a73d3936433b84e9b035a8a